# dlrnapi_client

./: .flake8  .gitignore  .gitreview  .pre-commit-config.yaml  .zuul.yaml  README.md  README.rst  galaxy.yml  project.config  setup.cfg  setup.py  test-requirements.txt  tox.ini
ansible/: dlrn_api.py
dlrnapi_client/: __init__.py  api_client.py  configuration.py  rest.py  shell.py
dlrnapi_client/ansible/: ansible.cfg.example  dlrn_api.py  example_playbook.yaml
dlrnapi_client/apis/: __init__.py  default_api.py
dlrnapi_client/models/: __init__.py  agg_query.py  base.py  ci_agg_vote.py  ci_vote.py  inline_response_201.py  metrics.py  model_import.py  params.py  params_1.py  params_2.py  params_3.py  params_4.py  params_5.py  promotion.py  promotion_query.py  recheck_request.py  repo.py
docs/: AggQuery.md  CIAggVote.md  CIVote.md  DefaultApi.md  InlineResponse201.md  Metrics.md  MetricsRequest.md  ModelImport.md  Params.md  Params1.md  Params2.md  Params3.md  Params4.md  Params5.md  Promotion.md  Recheck.md  RecheckRequest.md  RecheckResponse.md  Repo.md  command-line.md
playbooks/: preparation.yaml  py27-install.yaml  py310-install.yaml  py312-install.yaml  py37-install.yaml
plugins/: modules
test/: test_agg_query.py  test_ansible_module.py  test_base.py  test_ci_agg_vote.py  test_ci_vote.py  test_default_api.py  test_inline_response_201.py  test_metrics.py  test_model_import.py  test_params.py  test_params_1.py  test_params_2.py  test_params_3.py  test_params_4.py  test_params_5.py  test_promotion.py  test_promotion_query.py  test_recheck.py  test_repo.py  test_shell.py
