[metadata]
name = dlrnapi_client
summary = Client for DLRN REST API
description-file =
    README.md
author = OpenStack
author-email = jpena@redhat.com
home-page = http://www.rdoproject.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3

[files]
packages =
    dlrnapi_client

[entry_points]
console_scripts =
    dlrnapi = dlrnapi_client.shell:main

[wheel]
universal = 1
