[metadata]
name = dlrnapi_client
summary = Client for DLRN REST API
project_urls =
    Bug Tracker = https://github.com/softwarefactory-project/dlrnapi_client/issues
    Source Code = https://github.com/softwarefactory-project/dlrnapi_client
description-file =
    README.rst
long-description-content-type = text/x-rst; charset=UTF-8
author = OpenStack
author-email = jpena@redhat.com
home-page = http://www.rdoproject.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[files]
packages =
    dlrnapi_client

[options]
python_requires = >=2.7,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*,!=3.4.*

[entry_points]
console_scripts =
    dlrnapi = dlrnapi_client.shell:main

[wheel]
universal = 1
